--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QahwaBLK Coupon System</title>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -11,12 +13,26 @@
 </head>
 <body>
     <div id="root"></div>
+    <script>
+        // Initialize Firebase
+        const firebaseConfig = {
+          apiKey: "AIzaSyBmMJLv5ypRAXZKLF79qWdIpr7TuvF1t9Y",
+          authDomain: "qahwablk-coupons.firebaseapp.com",
+          projectId: "qahwablk-coupons",
+          storageBucket: "qahwablk-coupons.firebasestorage.app",
+          messagingSenderId: "406629470997",
+          appId: "1:406629470997:web:5c44ef090a2c327585cf1c"
+        };
+        
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+    </script>
     <script type="text/babel">
 const { useState, useEffect } = React;
 
 const BRANCHES = ['7th Circle [PoS]','Abdali Boulevard [PoS]','Abdoun Circle [PoS]','Abdoun [PoS]','Airport Arrivals [PoS]','Al Hujra [PoS]','Al Yasmeen [PoS]','Al-Ahliyya University [PoS]','Bayader [PoS]','Fuhais [PoS]','Ghosheh Street [PoS]','Hashemite University 1 [PoS]','Hurriyeh Street [PoS]','Jordan University 1 (Clock Tower) [PoS]','Jordan University 2 (Medicine) [PoS]','Khalda [PoS]','Kia Showroom [PoS]','Petra [PoS]','Sports City [PoS]','Sweifiyeh [PoS]','Sweileh [PoS]','Total - Esra\'a ( Airport Road ) [PoS]','Total - Wadi Saqraa [PoS]','Training Branch [PoS]','University Street 1 [PoS]','University Street 2 [PoS]','Zarqa - Autostrad [PoS]','Zarqa - Karama [PoS]'].sort();
 
-const ADMIN_PIN = 'QahwaBLKcanvouch@';
+const ADMIN_PIN = '2025';
 
 const Upload = () => <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" /></svg>;
 const Plus = () => <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 4v16m8-8H4" /></svg>;
@@ -49,36 +65,66 @@ const App = () => {
 
   useEffect(() => {
     loadCoupons();
+    // Real-time listener
+    const unsubscribe = db.collection('coupons').onSnapshot(snapshot => {
+      const loadedCoupons = [];
+      snapshot.forEach(doc => {
+        loadedCoupons.push({ id: doc.id, ...doc.data() });
+      });
+      setCoupons(loadedCoupons);
+      setLoading(false);
+    });
+    return () => unsubscribe();
   }, []);
 
-  const loadCoupons = () => {
-    setLoading(true);
+  const loadCoupons = async () => {
     try {
-      const data = localStorage.getItem('qahwablk_coupons');
-      if (data) setCoupons(JSON.parse(data));
+      const snapshot = await db.collection('coupons').get();
+      const loadedCoupons = [];
+      snapshot.forEach(doc => {
+        loadedCoupons.push({ id: doc.id, ...doc.data() });
+      });
+      setCoupons(loadedCoupons);
     } catch (error) {
-      console.log('No coupons found');
+      console.error('Error loading coupons:', error);
     }
     setLoading(false);
   };
 
-  const saveCoupons = (newCoupons) => {
-    localStorage.setItem('qahwablk_coupons', JSON.stringify(newCoupons));
-    setCoupons(newCoupons);
+  const saveCoupon = async (coupon) => {
+    try {
+      if (coupon.id && typeof coupon.id === 'string' && coupon.id.length > 15) {
+        await db.collection('coupons').doc(coupon.id).set(coupon);
+      } else {
+        const docRef = await db.collection('coupons').add(coupon);
+        coupon.id = docRef.id;
+      }
+    } catch (error) {
+      console.error('Error saving coupon:', error);
+      alert('Error saving coupon. Please try again.');
+    }
+  };
+
+  const deleteCouponFromDB = async (id) => {
+    try {
+      await db.collection('coupons').doc(id).delete();
+    } catch (error) {
+      console.error('Error deleting coupon:', error);
+      alert('Error deleting coupon. Please try again.');
+    }
   };
 
   const handleExcelImport = (e) => {
     const file = e.target.files[0];
     if (!file) return;
     const reader = new FileReader();
-    reader.onload = (event) => {
+    reader.onload = async (event) => {
       const text = event.target.result;
       const lines = text.split('\n').filter(line => line.trim());
       const dataLines = lines.slice(1);
       const imported = dataLines.map(line => {
         const [code, value, campaign, activationDate, expiryDate, status] = line.split(',').map(s => s.trim());
         return {
-          id: Date.now() + Math.random(),
           code: code || '',
           value: parseFloat(value) || 0,
           campaign: campaign || 'Uncategorized',
@@ -90,16 +136,19 @@ const App = () => {
           usedBranch: null
         };
       }).filter(c => c.code);
-      saveCoupons([...coupons, ...imported]);
+
+      for (const coupon of imported) {
+        await saveCoupon(coupon);
+      }
+      
       setShowImport(false);
       alert(`Imported ${imported.length} coupons successfully!`);
     };
     reader.readAsText(file);
   };
 
-  const createCoupon = (formData) => {
+  const createCoupon = async (formData) => {
     const newCoupon = {
-      id: Date.now(),
       code: formData.code,
       value: parseFloat(formData.value),
       campaign: formData.campaign,
@@ -110,22 +159,25 @@ const App = () => {
       usedAt: null,
       usedBranch: null
     };
-    saveCoupons([...coupons, newCoupon]);
+    await saveCoupon(newCoupon);
     setShowCreate(false);
   };
 
-  const toggleCouponStatus = (id) => {
-    const updated = coupons.map(c => c.id === id ? { ...c, status: c.status === 'active' ? 'inactive' : 'active' } : c);
-    saveCoupons(updated);
-  };
-
-  const deleteCoupon = (id) => {
-    if (confirm('Delete this coupon?')) {
-      saveCoupons(coupons.filter(c => c.id !== id));
+  const toggleCouponStatus = async (id) => {
+    const coupon = coupons.find(c => c.id === id);
+    if (coupon) {
+      coupon.status = coupon.status === 'active' ? 'inactive' : 'active';
+      await saveCoupon(coupon);
     }
   };
 
-  const validateAndRedeem = () => {
+  const deleteCoupon = async (id) => {
+    if (confirm('Delete this coupon?')) {
+      await deleteCouponFromDB(id);
+    }
+  };
+
+  const validateAndRedeem = async () => {
     if (!selectedBranch) {
       setValidationResult({ valid: false, message: 'Please select a branch first' });
       return;
@@ -152,8 +204,12 @@ const App = () => {
       setValidationResult({ valid: false, message: 'Coupon expired' });
       return;
     }
-    const updated = coupons.map(c => c.id === coupon.id ? {...c, used: true, usedAt: new Date().toISOString(), usedBranch: selectedBranch} : c);
-    saveCoupons(updated);
+
+    coupon.used = true;
+    coupon.usedAt = new Date().toISOString();
+    coupon.usedBranch = selectedBranch;
+    await saveCoupon(coupon);
+
     setValidationResult({ valid: true, message: `${coupon.value} JOD OFF`, campaign: coupon.campaign, redeemed: true });
     setTimeout(() => {
       setCouponCode('');
@@ -243,8 +299,7 @@ const App = () => {
       });
       reportLines.push('');
     });
-    reportLines.push('=== BY CAMPAIGN ===');
-    reportLines.push('');
+    reportLines.push('=== BY CAMPAIGN ===', '');
     const byCampaign = {};
     filteredCoupons.forEach(c => {
       if (!byCampaign[c.campaign]) byCampaign[c.campaign] = [];
@@ -395,11 +450,15 @@ const App = () => {
       <div className="min-h-screen bg-gray-50">
         <div className="bg-black text-white p-4 shadow-lg">
           <div className="max-w-7xl mx-auto flex justify-between items-center">
-            <div><h1 className="text-2xl font-bold">QahwaBLK Admin Panel</h1><p className="text-gray-300 text-sm">Coupon Management</p></div>
+            <div><h1 className="text-2xl font-bold">QahwaBLK Admin Panel</h1><p className="text-gray-300 text-sm">Coupon Management • Connected to Firebase</p></div>
             <button onClick={() => { setMode('select'); setIsAdminAuthenticated(false); }} className="px-4 py-2 bg-gray-800 rounded-lg hover:bg-gray-700 transition-colors">Logout</button>
           </div>
         </div>
         <div className="max-w-7xl mx-auto p-6">
+          <div className="bg-green-50 border border-green-200 rounded-lg p-3 mb-6 flex items-center gap-2">
+            <Check className="w-5 h-5 text-green-600" />
+            <span className="text-sm text-green-800">✓ Real-time sync enabled - All branches see the same data</span>
+          </div>
           <div className="flex flex-wrap gap-3 mb-6">
             <button onClick={() => setShowImport(true)} className="flex items-center gap-2 px-4 py-2 bg-black text-white rounded-lg hover:bg-gray-800 transition-colors"><Upload />Import Excel</button>
             <button onClick={() => setShowCreate(true)} className="flex items-center gap-2 px-4 py-2 bg-black text-white rounded-lg hover:bg-gray-800 transition-colors"><Plus />Create Coupon</button>
